--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,3 @@
-/* Application-wide Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
-body {
-  margin: 2em;
-}
-body, input[type="text"], button {
-  color: #888;
-  font-family: Cambria, Georgia;
-}
-/* everywhere else */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
 /* AppComponent's private CSS styles */
 h1 {
   font-size: 1.2em;
@@ -40,11 +18,11 @@ nav a {
   border-radius: 4px;
 }
 nav a:visited, a:link {
-  color: #607d8b;
+  color: #607D8B;
 }
 nav a:hover {
   color: #039be5;
-  background-color: #cfd8dc;
+  background-color: #CFD8DC;
 }
 nav a.active {
   color: #039be5;
